k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: event-management
  labels:
    name: event-management
